# imageoptimizer

./: Cargo.toml  README.md  get_version.sh
.github/workflows/: rust.yml
src/: error.rs  lib.rs  main.rs
src/formats/: jpeg.rs  mod.rs  png.rs  svg.rs  webp.rs
tests/: convert.rs  format.rs
tests/support/: simple
