[package]
name = "imgopt"
version = "0.1.0"
authors = ["Thomas Timmer <thomas.timmer@bettyblocks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mozjpeg = "0.8.24"
structopt = {version = "0.3", default_features = false}
png = "0.16"
imagequant = "3.0.3+sys2.14.0"
rgb = "*"
